# easy-invoices

./: .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
src/EasyInvoices/: Main.py
src/easy_invoices/cli/: __init__.py  cli.py
src/easy_invoices/data/: __init__.py  address.py  company.py  contact.py  options.py  preset.py  serializable_data.py
